Additional, minor cleanup.